corregidas pantallas logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,32 +3,32 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="get_started">Ver aplicación</string>
-    <string name="password">Password</string>
-    <string name="sign_in">Sign in</string>
-    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="password">Contraseña</string>
+    <string name="sign_in">Iniciar sesión</string>
+    <string name="don_t_have_an_account">No tienes una cuenta?</string>
     <string name="sign_up">Sign up</string>
     <string name="email">Email</string>
     <string name="name">Nombre</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="shop">Shop</string>
-    <string name="explore">Explore</string>
-    <string name="favourite">Favourite</string>
-    <string name="profile">Profile</string>
-    <string name="add_to_basket">Add to Basket</string>
+    <string name="shop">Tienda</string>
+    <string name="explore">Buscar</string>
+    <string name="favourite">Favorito</string>
+    <string name="profile">Perfil</string>
+    <string name="add_to_basket">Agregar al carrito</string>
     <string name="nutritions">Nutrition</string>
-    <string name="description">Description</string>
-    <string name="reviews">Reviews</string>
-    <string name="welcome_prompt">Hello, new grocery and gourmet foods just arrived !</string>
-    <string name="exclusive_offer">Exclusive Offer</string>
-    <string name="see_all">See all</string>
-    <string name="best_selling">Best Selling</string>
-    <string name="recommended">Recommended</string>
-    <string name="add_to_cart">Add to Cart</string>
-    <string name="cart">Cart</string>
+    <string name="description">Descripcion</string>
+    <string name="reviews">Valoraciones</string>
+    <string name="welcome_prompt">Hola, tenemos muchos libros para ofrecerte</string>
+    <string name="exclusive_offer">Oferta exclusiva</string>
+    <string name="see_all">Ver todo</string>
+    <string name="best_selling">Mas vendido</string>
+    <string name="recommended">Recomendado</string>
+    <string name="add_to_cart">Agregar al carrito</string>
+    <string name="cart">Carrito</string>
     <string name="line_item_image">Line Item image</string>
     <string name="fab">Fab</string>
-    <string name="my_basket">My Basket</string>
+    <string name="my_basket">Mi carrito</string>
     <string name="check_out">Go to Check Out</string>
     <string name="delivery">Entrega</string>
     <string name="edit">Edit</string>
@@ -40,10 +40,10 @@
     <string name="confirm_order">Confirma la orden</string>
     <string name="total">Total:</string>
     <string name="shipping_fee">Shipping fee:</string>
-    <string name="sign_out">Sign out</string>
+    <string name="sign_out">Cerrar sesión</string>
     <string name="sync_success">PRODUCT_SYNC_SUCCESS</string>
     <string name="sync_status_pref_name">SYNC_PREF_NAME</string>
-    <string name="profile_information">Profile Information</string>
+    <string name="profile_information">Información de el perfil</string>
     <string name="order_history">Order History</string>
     <string name="orden_creada_correctamente">La orden fue creada correctamente</string>
     <string name="continue_shopping">Continua comprando</string>
@@ -57,9 +57,9 @@
     <string name="order_success_dialog">SUCCESS_DIALOG</string>
     <string name="update_profile_successfully">Update profile successfully!</string>
     <string name="update_profile_failed">Update profile failed!</string>
-    <string name="notification_settings">Notification settings</string>
-    <string name="order_history_settings">Order history</string>
-    <string name="meal_planning_settings">Meal Planning</string>
+    <string name="notification_settings">Ajustes de notificación</string>
+    <string name="order_history_settings">Historial</string>
+    <string name="meal_planning_settings">Libros seleccionados</string>
 
 
     <string name="notifications">Notifications</string>
